--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask==2.2.2
 Flask-Cors==3.0.10
 Flask-Migrate==4.0.2
 Flask-SQLAlchemy==3.0.2
+gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
